added health check, GRPC_PORT & GRPC_GATEWAY_PORT
